--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: 4.2.0
+  firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
+  characters: ^1.4.0
+  material_color_utilities: ^0.11.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_native_splash: ^2.4.6
+  meta: ^1.16.0
+  test_api: ^0.7.6
 
 flutter:
   uses-material-design: true
