--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.5+3
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
   characters: ^1.4.0
   material_color_utilities: ^0.11.1
+  flutter_speed_dial: ^7.0.0
+  flutter_iconpicker: ^3.4.6
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  flutter_native_splash: ^2.4.6
+  flutter_native_splash: ^2.4.4
   meta: ^1.16.0
   test_api: ^0.7.6
 
