--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
   image_picker: ^0.8.5+3
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
+  cloud_functions: ^6.0.4
+
+  geolocator: ^11.1.0
+  table_calendar: ^3.0.9
+  intl: ^0.20.2
+
   characters: ^1.4.0
   material_color_utilities: ^0.11.1
   flutter_speed_dial: ^7.0.0
   flutter_iconpicker: ^3.4.6
   font_awesome_flutter: ^10.7.0
-  geolocator: ^11.1.0
-  intl: ^0.20.2
+
 
 dev_dependencies:
   flutter_test:
